# icy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
beacon/src/: client.rs
benches/: wgpu.rs
core/src/: clipboard.rs  shell.rs
core/src/mouse/: event.rs
core/src/theme/: spacing.rs
core/src/widget/: text.rs
crates/backends/tiny_skia/: Cargo.toml
crates/backends/tiny_skia/src/: engine.rs  geometry.rs  lib.rs  text.rs
crates/backends/wgpu/: Cargo.toml
crates/backends/wgpu/src/: color.rs  lib.rs  quad.rs  settings.rs  text.rs  triangle.rs
crates/backends/wgpu/src/image/: atlas.rs  mod.rs
crates/backends/wgpu/src/quad/: gradient.rs  solid.rs
crates/backends/wgpu/src/triangle/: msaa.rs
crates/backends/wgpu/src/window/: compositor.rs
crates/core/: Cargo.toml
crates/core/src/: accessibility.rs  alignment.rs  border.rs  clipboard.rs  color.rs  dnd.rs  drag.rs  element.rs  event.rs  input_method.rs  layout.rs  layout_direction.rs  lib.rs  menu.rs  padding.rs  renderer.rs  settings.rs  shell.rs  text.rs  widget.rs
crates/core/src/keyboard/: event.rs  key.rs
crates/core/src/layout/: node.rs
crates/core/src/mouse/: event.rs
crates/core/src/theme/: component.rs  container.rs  loader.rs  mod.rs  palette.rs  tests.rs
crates/core/src/widget/: operation.rs  text.rs
crates/core/src/widget/operation/: accessibility.rs  focusable.rs  scrollable.rs
crates/core/src/window/: event.rs  id.rs
crates/extras/highlighter/: Cargo.toml
crates/extras/highlighter/src/: lib.rs
crates/extras/selector/: Cargo.toml
crates/futures/: Cargo.toml
crates/futures/src/: backend.rs  lib.rs  subscription.rs
crates/graphics/: Cargo.toml
crates/graphics/src/: lib.rs  text.rs
crates/icy_ui/: Cargo.toml
crates/icy_ui/src/: application.rs  daemon.rs  lib.rs  time.rs
crates/icy_ui/src/application/: timed.rs
crates/program/: Cargo.toml
crates/program/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: fallback.rs  lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: accessibility.rs  clipboard.rs  context_menu.rs  dnd.rs  keyboard.rs  lib.rs  user_interface.rs  window.rs
crates/runtime/src/widget/: operation.rs  selector.rs
crates/shell/macos/: Cargo.toml
crates/shell/macos/src/: dnd.rs  lib.rs  menu.rs  stubs.rs  url_handler.rs
crates/shell/windows/: Cargo.toml
crates/shell/windows/src/: dnd.rs  drop_target.rs  lib.rs  stubs.rs
crates/shell/winit/: Cargo.toml
crates/shell/winit/src/: accessibility.rs  clipboard.rs  conversion.rs  dnd.rs  drag_detector.rs  lib.rs  proxy.rs
crates/shell/winit/src/window/: state.rs
crates/tools/beacon/: Cargo.toml
crates/tools/debug/: Cargo.toml
crates/tools/debug/src/: lib.rs
crates/tools/devtools/: Cargo.toml
crates/tools/devtools/src/: lib.rs
crates/tools/test/: Cargo.toml
crates/tools/test/src/: emulator.rs  instruction.rs  lib.rs  simulator.rs
crates/tools/tester/: Cargo.toml
crates/tools/tester/src/: icon.rs  lib.rs  recorder.rs
crates/widget/: Cargo.toml
crates/widget/src/: button.rs  canvas.rs  checkbox.rs  color_picker.rs  column.rs  combo_box.rs  container.rs  date_picker.rs  dnd.rs  focus.rs  grid.rs  helpers.rs  image.rs  keyed.rs  lib.rs  markdown.rs  mouse_area.rs  overlay.rs  pane_grid.rs  pick_list.rs  pin.rs  progress_bar.rs  qr_code.rs  radio.rs  radio_group.rs  row.rs  rule.rs  slider.rs  spin_button.rs  stack.rs  svg.rs  table.rs  text.rs  text_editor.rs  text_input.rs  toaster.rs  toggler.rs  tooltip.rs  vertical_slider.rs
crates/widget/src/button/: icon.rs  image.rs  link.rs  mod.rs  text.rs  widget.rs
crates/widget/src/image/: viewer.rs
crates/widget/src/keyed/: column.rs
crates/widget/src/lazy/: component.rs
crates/widget/src/menu/: action.rs  app_menu.rs  context_menu.rs  menu_bar.rs  menu_inner.rs  menu_item_line.rs  menu_tree.rs  mnemonic.rs  mod.rs  style.rs
crates/widget/src/menu/menu_bar/: mod.rs  state.rs  widget.rs
crates/widget/src/menu/menu_inner/: bounds.rs  helpers.rs  menu.rs  mod.rs  overlay.rs  state.rs  types.rs
crates/widget/src/overlay/: menu.rs  modal.rs
crates/widget/src/scrolling/: mod.rs  scroll_area.rs  scrollable.rs  virtual_scrollable.rs
debug/src/: lib.rs
doc/: ACCESSIBILITY.md  CLIPBOARD.md  DATE_PICKER.md  DND.md  MENU.md  MOUSE_EVENTS.md  SCROLLBAR.md  THEME.md
doc/new/: ACCESSIBILITY.md  BUTTONS.md  CLIPBOARD.md  COLOR_PICKER.md  DND.md  MENU.md  SCROLLBAR.md  TOASTER.md
examples/accessibility/: Cargo.toml
examples/accessibility/src/: main.rs
examples/bezier_tool/src/: main.rs
examples/context_menu/: Cargo.toml
examples/context_menu/src/: main.rs
examples/delineate/src/: main.rs
examples/demo_app/: Cargo.toml  build_bundle.sh
examples/demo_app/DemoApp.app/Contents/: Info.plist
examples/demo_app/src/: about.rs  main.rs
examples/demo_app/src/pages/: buttons.rs  canvas_page.rs  context_menu.rs  dnd_page.rs  event_log.rs  lists.rs  markdown_page.rs  mod.rs  overview.rs  pane_grid_page.rs  pickers.rs  qr_code.rs  scrolling.rs  shader_page.rs  sliders.rs  text_inputs.rs  theme_page.rs  toasts.rs  toggles.rs
examples/dnd/: Cargo.toml
examples/dnd/src/: main.rs
examples/focus/: Cargo.toml
examples/focus/src/: main.rs
examples/game_of_life/src/: main.rs
examples/markdown/src/: main.rs
examples/menu/: Cargo.toml
examples/menu/src/: main.rs
examples/pickers/: Cargo.toml
examples/pickers/src/: main.rs
examples/rtl/: Cargo.toml
examples/scrollable/: Cargo.toml
examples/theme/: Cargo.toml  solarized_dark.ron  solarized_light.ron
examples/theme2/: Cargo.toml
runtime/src/: clipboard.rs
src/: application.rs  daemon.rs  lib.rs
test/src/: emulator.rs  instruction.rs  simulator.rs
tester/src/: recorder.rs
widget/src/: button.rs  checkbox.rs  helpers.rs  lib.rs  markdown.rs  mouse_area.rs  pane_grid.rs  pick_list.rs  progress_bar.rs  qr_code.rs  radio.rs  scrollable.rs  slider.rs  table.rs  text_editor.rs  text_input.rs  toggler.rs  vertical_slider.rs
winit/src/: clipboard.rs  conversion.rs  lib.rs
(+32 files in other folders)
