[profile.release-opt]
inherits = "release"
codegen-units = 1
debug = false
lto = true
incremental = false
opt-level = 3
overflow-checks = false
strip = "debuginfo"

[workspace]
resolver = "3"
members = [
    # Main crate
    "crates/icy_ui",

    # Core crates
    "crates/core",
    "crates/futures",
    "crates/graphics",
    "crates/program",
    "crates/renderer",
    "crates/runtime",
    "crates/widget",

    # Rendering backends
    "crates/backends/wgpu",
    "crates/backends/tiny_skia",

    # Shell/windowing
    "crates/shell/winit",
    "crates/shell/macos",
    "crates/shell/windows",

    # Developer tools
    "crates/tools/beacon",
    "crates/tools/debug",
    "crates/tools/devtools",
    "crates/tools/test",
    "crates/tools/tester",

    # Optional extras
    "crates/extras/highlighter",
    "crates/extras/selector",

    # Examples
    "examples/*",
]

[workspace.package]
version = "0.1.0"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mkrueger/icy_ui"
homepage = "https://github.com/mkrueger/icy_ui"
categories = ["gui"]
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
rust-version = "1.88"

[workspace.dependencies]
icy_ui = { version = "0.1.0", path = "crates/icy_ui" }

# Core crates
icy_ui_core = { version = "0.1.0", path = "crates/core" }
icy_ui_futures = { version = "0.1.0", path = "crates/futures" }
icy_ui_graphics = { version = "0.1.0", path = "crates/graphics" }
icy_ui_program = { version = "0.1.0", path = "crates/program" }
icy_ui_renderer = { version = "0.1.0", path = "crates/renderer" }
icy_ui_runtime = { version = "0.1.0", path = "crates/runtime" }
icy_ui_widget = { version = "0.1.0", path = "crates/widget" }
# Rendering backends
icy_ui_tiny_skia = { version = "0.1.0", path = "crates/backends/tiny_skia", default-features = false }
icy_ui_wgpu = { version = "0.1.0", path = "crates/backends/wgpu", default-features = false }

# Shell/windowing
icy_ui_winit = { version = "0.1.0", path = "crates/shell/winit", default-features = false }
icy_ui_macos = { version = "0.1.0", path = "crates/shell/macos" }
icy_ui_windows = { version = "0.1.0", path = "crates/shell/windows" }

# Developer tools
icy_ui_beacon = { version = "0.1.0", path = "crates/tools/beacon" }
icy_ui_debug = { version = "0.1.0", path = "crates/tools/debug" }
icy_ui_devtools = { version = "0.1.0", path = "crates/tools/devtools" }
icy_ui_test = { version = "0.1.0", path = "crates/tools/test" }
icy_ui_tester = { version = "0.1.0", path = "crates/tools/tester" }

# Optional extras
icy_ui_highlighter = { version = "0.1.0", path = "crates/extras/highlighter" }
icy_ui_selector = { version = "0.1.0", path = "crates/extras/selector" }

bitcode = { version = "0.6", features = ["serde"] }
bitflags = "2.0"
bytemuck = { version = "1.0", features = ["derive"] }
bytes = "1.6"
cargo-hot = { version = "0.1", package = "cargo-hot-protocol" }
cosmic-text = { git = "https://github.com/pop-os/cosmic-text.git", rev = "a07a6190548c8e40a55f6b7761387047ff1bf6ff" }
cryoglyph = { git = "https://github.com/iced-rs/cryoglyph.git", rev = "89883bcf38b5bed0d7bade788ef738d9facc857c" }
futures = { version = "0.3", default-features = false, features = [
    "std",
    "async-await",
] }
glam = "0.30.9"
guillotiere = "0.6"
half = "2.2"
image = { version = "0.25", default-features = false }
kamadak-exif = "0.6"
kurbo = "0.13.0"
lilt = "0.8"
log = "0.4"
lyon = "1.0"
lyon_path = "1.0"
mundy = { version = "0.2", default-features = false }
nom = "8"
num-traits = "0.2"
ouroboros = "0.18"
png = "0.18"
pulldown-cmark = "0.13.0"
qrcode = { version = "0.14.1", default-features = false }
raw-window-handle = "0.6"
resvg = "0.45"
rfd = "0.17.0"
ron = "0.12.0"
rustc-hash = "2.0"
semver = "1.0"
serde = "1.0"
sha2 = "0.10"
sipper = "0.1"
slotmap = "1.0"
smol = "2"

# Winit needs a specfic version of smol_str
smol_str = "0.2"

softbuffer = { version = "0.4", default-features = false }
sysinfo = "0.37.2"
thiserror = "2"
tiny-skia = { version = "0.11", default-features = false, features = [
    "std",
    "simd",
] }
tokio = "1.49.0"
tracing = "0.1"
two-face = { version = "0.5.1", default-features = false, features = [
    "syntect-default-fancy",
] }
unicode-segmentation = "1.12.0"
url = "2.5"
wasm-bindgen-futures = "0.4"
wasmtimer = "0.4.3"
web-sys = "0.3.83"
web-time = "1.1"

wgpu = { version = "27.0", default-features = false, features = [
    "std",
    "wgsl",
] }
winit = { version = "0.30.12", default-features = false, features = ["rwh_06"] }

# Accessibility
accesskit = "0.22.0"
accesskit_winit = "0.30.0"

# Clipboard backends
clipboard-rs = "0.3"
smithay-clipboard = { git = "https://github.com/mkrueger/smithay-clipboard.git", rev = "0be79e9828bb42ea6591afe95e2f189458577054", features = [
    "dnd",
] }
wayland-client = "0.31"

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
missing_docs = "deny"
unsafe_code = "deny"
unused_results = "deny"

[workspace.lints.clippy]
type-complexity = "allow"
map-entry = "allow"
large-enum-variant = "allow"
result_large_err = "allow"
semicolon_if_nothing_returned = "deny"
trivially-copy-pass-by-ref = "deny"
default_trait_access = "deny"
match-wildcard-for-single-variants = "deny"
redundant-closure-for-method-calls = "deny"
filter_map_next = "deny"
manual_let_else = "deny"
unused_async = "deny"
from_over_into = "deny"
needless_borrow = "deny"
new_without_default = "deny"
useless_conversion = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "forbid"
