[package]
name = "icy_ui_core"
description = "The essential ideas of icy_ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
advanced = []
crisp = []
basic-shaping = []
advanced-shaping = []
serde = ["dep:serde", "dep:ron"]
accessibility = ["dep:accesskit"]

[dependencies]
bitflags.workspace = true
bytes.workspace = true
glam.workspace = true
lilt.workspace = true
log.workspace = true
num-traits.workspace = true
rustc-hash.workspace = true
smol_str.workspace = true
thiserror.workspace = true
web-time.workspace = true

serde.workspace = true
serde.optional = true
serde.features = ["derive"]

ron.workspace = true
ron.optional = true

accesskit.workspace = true
accesskit.optional = true
