[package]
name = "icy_ui_program"
description = "The definition of an icy_ui program"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
debug = []
time-travel = []
accessibility = ["icy_ui_runtime/accessibility"]

[dependencies]
icy_ui_graphics.workspace = true
icy_ui_runtime.workspace = true
