[package]
name = "icy_ui_renderer"
description = "The official renderer for icy_ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
wgpu = ["icy_ui_wgpu/default"]
wgpu-bare = ["icy_ui_wgpu"]
tiny-skia = ["icy_ui_tiny_skia"]
image = ["icy_ui_tiny_skia?/image", "icy_ui_wgpu?/image"]
svg = ["icy_ui_tiny_skia?/svg", "icy_ui_wgpu?/svg"]
geometry = ["icy_ui_graphics/geometry", "icy_ui_tiny_skia?/geometry", "icy_ui_wgpu?/geometry"]
web-colors = ["icy_ui_wgpu?/web-colors"]
webgl = ["icy_ui_wgpu?/webgl"]
fira-sans = ["icy_ui_graphics/fira-sans"]
strict-assertions = ["icy_ui_wgpu?/strict-assertions"]
x11 = ["icy_ui_tiny_skia?/x11"]
wayland = ["icy_ui_tiny_skia?/wayland"]
accessibility = ["icy_ui_graphics/accessibility"]

[dependencies]
icy_ui_graphics.workspace = true

icy_ui_tiny_skia.workspace = true
icy_ui_tiny_skia.optional = true

icy_ui_wgpu.workspace = true
icy_ui_wgpu.optional = true

log.workspace = true
thiserror.workspace = true
