[package]
name = "icy_ui_runtime"
description = "A renderer-agnostic runtime for icy_ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
selector = ["dep:icy_ui_selector"]
accessibility = ["icy_ui_core/accessibility"]

[lints]
workspace = true

[dependencies]
bytes.workspace = true
icy_ui_core.workspace = true
icy_ui_futures.workspace = true

raw-window-handle.workspace = true
thiserror.workspace = true

sipper.workspace = true
sipper.optional = true

icy_ui_selector.workspace = true
icy_ui_selector.optional = true
