[package]
name = "icy_ui_widget"
description = "The built-in widgets for icy_ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
lazy = ["ouroboros"]
image = ["icy_ui_renderer/image"]
svg = ["icy_ui_renderer/svg"]
canvas = ["icy_ui_renderer/geometry"]
qr_code = ["canvas", "dep:qrcode"]
wgpu = ["icy_ui_renderer/wgpu-bare"]
markdown = ["dep:pulldown-cmark"]
highlighter = ["dep:icy_ui_highlighter"]
advanced = []
accessibility = ["icy_ui_renderer/accessibility"]
tokio = ["dep:tokio"]

[dependencies]
icy_ui_renderer.workspace = true
icy_ui_runtime.workspace = true

slotmap.workspace = true
num-traits.workspace = true
log.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true

tokio = { workspace = true, features = ["time"], optional = true }

ouroboros.workspace = true
ouroboros.optional = true

qrcode.workspace = true
qrcode.optional = true

pulldown-cmark.workspace = true
pulldown-cmark.optional = true

icy_ui_highlighter.workspace = true
icy_ui_highlighter.optional = true
opener = "0.8"