[package]
name = "demo_app"
version = "0.1.0"
authors = ["Icy contributors"]
edition = "2021"
publish = false

[dependencies]
icy_ui.workspace = true
icy_ui.features = [
    "smol",
    "image",
    "svg",
    "tokio",
    "qr_code",
    "wgpu",
    "markdown",
    "highlighter",
    "accessibility", 
    "advanced"
]
icy_ui_core.workspace = true
chrono = "0.4"
bytemuck = { version = "1.0", features = ["derive"] }
open = "5"
