[package]
name = "icy_ui_tiny_skia"
description = "A software renderer for icy_ui on top of tiny-skia"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
default = ["x11", "wayland"]
image = ["icy_ui_graphics/image"]
svg = ["icy_ui_graphics/svg", "resvg"]
geometry = ["icy_ui_graphics/geometry"]
x11 = ["softbuffer/x11", "softbuffer/x11-dlopen"]
wayland = ["softbuffer/wayland", "softbuffer/wayland-dlopen"]

[dependencies]
icy_ui_debug.workspace = true
icy_ui_graphics.workspace = true

bytemuck.workspace = true
cosmic-text.workspace = true
kurbo.workspace = true
log.workspace = true
rustc-hash.workspace = true
softbuffer.workspace = true
tiny-skia.workspace = true

resvg.workspace = true
resvg.optional = true
