[package]
name = "icy_ui_wgpu"
description = "A renderer for icy_ui on top of wgpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
default = ["wgpu/default"]
geometry = ["icy_ui_graphics/geometry", "lyon"]
image = ["icy_ui_graphics/image"]
svg = ["icy_ui_graphics/svg", "resvg/text"]
web-colors = ["icy_ui_graphics/web-colors"]
webgl = ["wgpu/webgl"]
strict-assertions = []

[dependencies]
icy_ui_debug.workspace = true
icy_ui_graphics.workspace = true

bitflags.workspace = true
bytemuck.workspace = true
futures.workspace = true
glam.workspace = true
cryoglyph.workspace = true
guillotiere.workspace = true
log.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
wgpu.workspace = true

lyon.workspace = true
lyon.optional = true

resvg.workspace = true
resvg.optional = true
