[package]
name = "icy_ui_highlighter"
description = "A syntax highlighter for icy_ui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
icy_ui_core.workspace = true

two-face.workspace = true
