[package]
name = "icy_ui_windows"
description = "Windows platform integration for icy_ui (DnD, etc.)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
default = ["dnd"]
dnd = []

[dependencies]
log.workspace = true

# Windows API bindings (only on Windows)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
] }
windows-core = "0.58"
