[package]
name = "iced_winit"
description = "A runtime for iced on top of winit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
default = ["x11", "wayland"]
debug = ["iced_debug/enable"]
sysinfo = ["dep:sysinfo"]
hinting = []
unconditional-rendering = []
linux-theme-detection = ["dep:mundy", "mundy/async-io", "mundy/color-scheme"]
x11 = ["winit/x11", "dep:clipboard-rs"]
wayland = ["winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita", "dep:smithay-clipboard", "dep:wayland-client"]

[dependencies]
iced_debug.workspace = true
iced_program.workspace = true

log.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
tracing.workspace = true
winit.workspace = true

sysinfo.workspace = true
sysinfo.optional = true

# Clipboard backends
[target.'cfg(any(windows, target_os = "macos"))'.dependencies]
clipboard-rs.workspace = true

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
clipboard-rs = { workspace = true, optional = true }
smithay-clipboard = { workspace = true, optional = true }
wayland-client = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
web-sys.features = ["Document", "Window", "HtmlCanvasElement"]
wasm-bindgen-futures.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
mundy.workspace = true
mundy.optional = true
