[package]
name = "icy_ui_debug"
description = "A pluggable API for debugging icy_ui applications"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
enable = ["dep:icy_ui_beacon"]
hot = ["enable", "dep:cargo-hot"]

[dependencies]
icy_ui_core.workspace = true
icy_ui_futures.workspace = true
log.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
icy_ui_beacon.workspace = true
icy_ui_beacon.optional = true

cargo-hot.workspace = true
cargo-hot.optional = true
