[package]
name = "icy_ui_devtools"
description = "Attachable developer tools for any icy_ui program"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
time-travel = ["icy_ui_program/time-travel"]

[dependencies]
icy_ui_debug.workspace = true
icy_ui_widget.workspace = true
log.workspace = true

icy_ui_program.workspace = true
icy_ui_program.features = ["debug"]
