[package]
name = "icy_ui_test"
description = "A library for testing icy_ui applications in headless mode"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
icy_ui_runtime.workspace = true
icy_ui_program.workspace = true
icy_ui_selector.workspace = true

icy_ui_futures.workspace = true
icy_ui_futures.features = ["thread-pool"]

icy_ui_renderer.workspace = true
icy_ui_renderer.features = ["fira-sans"]

nom.workspace = true
png.workspace = true
sha2.workspace = true
thiserror.workspace = true
