[package]
name = "icy_ui_tester"
description = "A test recorder, editor, and runner for your icy_ui applications"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
icy_ui_test.workspace = true
icy_ui_widget.workspace = true
log.workspace = true
rfd.workspace = true

[lints]
workspace = true
